# gerenciador-estagio-UTFPR

./: .env.example  .gitignore  README.md  TCC.postman_collection.json  TCC.postman_environment.json  docker-compose.yml  main.py  package-lock.json  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini
backend/documents_and_reports/: Plano de estágio.docx  Relatório Parcial de Estágio_Estagiário.docx  Relatório Parcial de Estágio_Supervisor.docx  Relatório de Visita.docx
backend/holidays_manager/: README.md  holiday_formatter.py  holidays_from_2026.json
backend/scripts/: init.sql  init_db.py  seed_database.py  seed_database_fixed_values.py  seed_database_queries.py
backend/src/adapters/auth/: authlib_oauth_adapter.py
backend/src/adapters/database/: mysql_adapter.py
backend/src/adapters/email/: smtp_email_adapter.py
backend/src/adapters/session/: starlette_session_adapter.py
backend/src/adapters/web/: frontend_redirect_adapter.py
backend/src/api/: admin_router.py  advisor_router.py  document_router.py  file_formatter_router.py  login_page_router.py  notification_router.py  process_router.py  student_router.py
backend/src/core/: config.py  dependencies.py
backend/src/core/exceptions/: authentication_exceptions.py  database_exceptions.py  document_exceptions.py
backend/src/core/ports/: admin_ports.py  advisor_ports.py  authentication_ports.py  company_ports.py  database_port.py  document_ports.py  email_port.py  file_formatter_port.py  process_ports.py  session_port.py  student_port.py  student_ports.py  workload_ports.py
backend/src/core/repo/: admin_repo.py  advisor_repo.py  authentication_ports.py  company_repo.py  document_repo.py  process_repo.py  student_repo.py  workload_repo.py
backend/src/core/schemas/: document_schemas.py  email_schemas.py  process_schemas.py  role_schemas.py  workload_schemas.py
backend/src/core/tasks/: admin_tasks.py  advisor_tasks.py  authentication_tasks.py  company_tasks.py  document_tasks.py  email_tasks.py  file_formatter_tasks.py  process_tasks.py  student_tasks.py  workload_tasks.py
backend/src/core/use_cases/: admin_use_cases.py  advisor_use_cases.py  (+6 more)
backend/tests/: conftest.py
(+141 files in other folders)
