[project]
name = "sisprae-utfpr"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo Aschwanden Soviersovski",email = "eduardo.as2000@hotmail.com"}
    {name = "Pedro Augusto Tortola",email = "torts@tortsmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
